src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Eventbrite_Attendees_Checked_In__c</fullName>
        <inlineHelpText>Sum total of checked-in attendees among Eventbrite campaign members.</inlineHelpText>
        <label>Eventbrite Attendees Checked-In</label>
        <summarizedField>CampaignMember.Eventbrite_Attendees_Checked_In__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Eventbrite_Attendees_Registered__c</fullName>
        <inlineHelpText>Total number of registered (ticketed) attendees among Eventbrite campaign members.</inlineHelpText>
        <label>Eventbrite Attendees Registered</label>
        <summarizedField>CampaignMember.Eventbrite_Ticket_Quantity__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Eventbrite_Event_ID__c</fullName>
        <inlineHelpText>ID used by Eventbrite to uniquely identify an event.</inlineHelpText>
        <label>Eventbrite Event ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eventbrite_Link__c</fullName>
        <formula>IF(ISNULL(Eventbrite_Event_ID__c), NULL, HYPERLINK(&apos;http://www.eventbrite.com/myevent?eid=&apos;+ Eventbrite_Event_ID__c , &apos;View in Eventbrite&apos;, &apos;_blank&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eventbrite Link</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outreach</fullName>
        <active>true</active>
        <label>Outreach</label>
    </recordTypes>
</CustomObject>